[package]
name = "aoc2018"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4.0"
chrono = "0.4.19"

[dev-dependencies]
test-case = "1.2.0"
#assert2 = "0.3.6"
pretty_assertions = "1.0.0"